--- a/src/main/webapp/WEB-INF/views/books/show.html
+++ b/src/main/webapp/WEB-INF/views/books/show.html
@@ -8,22 +8,23 @@
 <h2 style="color: coral">Book</h2>
 <p th:text="${book.getTitle()} + ', ' + ${book.getAuthor()} + ', ' + ${book.getYear()}">VALUE</p>
 <br/>
-<div th:if="${person}">
-    <p th:text="'The book owner now is: ' + ${person.getName}"></p>
+<div th:if="${owner}">
+    <span>Книга сейчас у: </span> <span th:text="${owner.getName()}">Person Name</span>
+
     <form th:method="PATCH" th:action="@{/books/{id}/release(id=${book.getId()})}">
-        <input type="submit" value="Release book"/>
+        <input type="submit" value="Освободить книгу"/>
     </form>
 </div>
-<br/>
-<div th:unless="${person}">
-    <p>This book is free</p>
-    <form th:method="PATCH" th:action="@{/books/{id}/addOwner(id=${book.getId()})}">
-    <label for="person">Choose new reader: </label>
-    <select th:object="${person}" th:field="*{id}" id="person">
-        <option th:each="person : ${people}" th:value="${person.getId()}"
-                th:text="${person.getName()}">name</option>
-    </select>
-        <input type="submit" value="Submit"/>
+
+<div th:if="${people}">
+    <span>Эта книга свободна. Кому назначить ее?</span>
+    <form th:method="PATCH" th:action="@{/books/{id}/assign(id=${book.getId()})}">
+        <label for="person">Выберите человека</label>
+        <select th:object="${person}" th:field="*{id}" id="person">
+            <option th:each="person : ${people}" th:value="${person.getId()}" th:text="${person.getName()}">
+            </option>
+        </select>
+        <input type="submit" value="Назначить книгу"/>
     </form>
 </div>
 
