final commit, everything works

--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 <form th:method="PATCH" th:action="@{/books/{id}(id=${book.getId()})}" th:object="${book}">
-  <label for="title">Enter book title: </label>
+  <label for="title">Введите название: </label>
   <input type="text" th:field="*{title}" id="title">
   <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title validation</div>
   <br/>
-  <label for="author">Enter author: </label>
+  <label for="author">Введите автора: </label>
   <input type="text" th:field="*{author}" id="author">
   <br/>
-  <label for="year">Enter year: </label>
+  <label for="year">Введите год выпуска: </label>
   <input type="text" th:field="*{year}" id="year">
   <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">year validation</div>
   <br/>
 
-  <input type="submit" value="Update"/>
+  <input type="submit" value="Обновить"/>
 </form>
 </body>
 </html>
