--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -5,7 +5,7 @@
   <title>All people</title>
 </head>
 <body>
-<h1>Book list</h1>
+<h1>Список книг </h1>
 
 <div th:each="book : ${books}">
   <a th:href="@{/books/{id}(id=${book.getId()})}"
@@ -13,8 +13,11 @@
 </div>
 
 <hr/>
-<a href="books/new">Add book</a>
-<a href="/people"> People list</a>
+<a href="books/new">Добавить книгу</a>
+<a href="/people"> Список людей</a>
+<br/>
+<a href="/books?page=0&books_per_page=3">Страничный вид</a>
+<a href="/books?sort_by_year=true">Отсортировать по году</a>
 <hr/>
 </body>
 </html>
