--- a/src/main/webapp/WEB-INF/views/books/new.html
+++ b/src/main/webapp/WEB-INF/views/books/new.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 <form th:method="POST" th:action="@{/books}" th:object="${book}">
-  <label for="title">Enter title: </label>
+  <label for="title">Введите название: </label>
   <input type="text" th:field="*{title}" id="title">
   <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title validation</div>
   <br/>
-  <label for="author">Enter author: </label>
+  <label for="author">Введите автора: </label>
   <input type="text" th:field="*{author}" id="author">
   <div style="color: red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">Author validation</div>
   <br/>
-  <label for="year">Enter year: </label>
+  <label for="year">Введите год выпуска: </label>
   <input type="text" th:field="*{year}" id="year">
   <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Year validation</div>
   <br/>
-  <input type="submit" value="Create"/>
+  <input type="submit" value="Добавить"/>
 </form>
 </body>
 </html>
